Update GameModeLibAgent.java